# Winners

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  error_log.txt  nginx.conf  raven-462512-57aee9507704.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py
backend/src/ai/: client.py  constants.py  exceptions.py  graph.py  nodes.py  panorama_client.py  panorama_graph.py  panorama_nodes.py  panorama_prompts.py  panorama_state.py  prompts.py  state.py  utils.py
backend/src/bom/: __init__.py  agent.py  manager.py  models.py  router.py  service.py
backend/src/floor_plan/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/panorama/: constants.py  dependencies.py  exceptions.py  gcs.py  models.py  router.py  schemas.py  service.py  storage.py
backend/src/users/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/storage/designs/184c2e38c515/: meta.json
backend/storage/designs/af5acec1582f/: meta.json
backend/tests/ai/: test_graph.py
backend/tests/floor_plan/: test_service.py
frontend/: Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: layout-content.tsx  layout.tsx  providers.tsx
frontend/app/designs/: page.tsx
frontend/app/features/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/plan/: page.tsx
frontend/entities/floor-plan/: index.ts
frontend/entities/panorama/: index.ts
(+68 files in other folders)
